Add genapp details

--- a/example_config.ini
+++ b/example_config.ini
@@ -7,3 +7,8 @@ PASSWORD = password
 [MOKA]
 SERVER = server_name
 DATABASE = database_name
+
+[GENAPP01]
+SERVER = server_name
+USER = username
+PASSWORD = password
